# OpenONVIF

OnvifSDK/: CMakeLists.txt  README
OnvifSDK/WsDiscovery/: WsddLib.cpp  WsddLib.h  onvifxx.cpp  onvifxx.hpp  remotediscovery.hpp  remotediscovery_proxy.cpp  remotediscovery_service.cpp  wsa.cpp  wsa.hpp  wsdd.cpp  wsdd.hpp
OnvifSDK/include/: BaseClient.h  BaseServer.h  DeviceClient.h  DeviceIOClient.h  DeviceIOServiceImpl.h  DeviceServiceImpl.h  DisplayClient.h  DisplayServiceImpl.h  MediaServiceImpl.h  OnvifSDK.h  ReceiverClient.h  ReceiverServiceImpl.h  RecordingClient.h  RecordingServiceImpl.h  ReplayServiceImpl.h  SearchServiceImpl.h  commonTypes.h  stringGenerator.h
OnvifSDK/source/: BaseClient.cpp  BaseServer.cpp  DeviceClient.cpp  DeviceIOClient.cpp  DeviceIOServiceImpl.cpp  DeviceIOTypes.cpp  DeviceServiceImpl.cpp  DeviceTypes.cpp  DisplayClient.cpp  DisplayServiceImpl.cpp  DisplayTypes.cpp  MediaServiceImpl.cpp  ReceiverClient.cpp  ReceiverServiceImpl.cpp  ReceiverTypes.cpp  RecordingClient.cpp  RecordingServiceImpl.cpp  RecordingTypes.cpp  ReplayServiceImpl.cpp  ReplayTypes.cpp  SearchServiceImpl.cpp  SearchTypes.cpp
OnvifSDK/xml/: CMakeLists.txt  deviceio.wsdl  devicemgmt.wsdl  media.wsdl  onvif.xsd  recording.wsdl  search.wsdl
WsDiscovery/: CMakeLists.txt  README  WsddLib.cpp  onvifxx.cpp  remotediscovery_proxy.cpp  remotediscovery_service.cpp  wsa.cpp  wsa.hpp  wsdd.cpp  wsdd.hpp
WsDiscovery/cmake/: FindGSOAP.cmake
WsDiscovery/include/onvifxx/: onvifxx.hpp  remotediscovery.hpp
WsDiscovery/xml/: CMakeLists.txt  patch.xslt
common/: sigrlog.h
examples/OnvifClient/: CMakeLists.txt  README  mainClient.cpp
examples/OnvifServer/: CMakeLists.txt  OnvifTestServer.cpp  OnvifTestServer.h  README  mainServ.cpp
